lact-daemon/src/tests/snapshots/lact_daemon__tests__intel__a380-xe.snap
---
source: lact-daemon/src/tests/mod.rs
expression: device_info
---
{
  "clocks_info": {
    "table": {
      "type": "intel",
      "value": {
        "gt_freq": [
          300,
          2450
        ],
        "rp0_freq": 2450,
        "rpe_freq": 600,
        "rpn_freq": 300
      }
    }
  },
  "info": {
    "driver": "xe",
    "drm_info": {
      "memory_info": {
        "cpu_accessible_total": 0,
        "cpu_accessible_used": 0,
        "resizeable_bar": true
      },
      "vram_clock_ratio": 1.0
    },
    "flags": [],
    "link_info": {},
    "pci_info": {
      "device_pci_info": {
        "model": "DG2 [Arc A380]",
        "model_id": "56A5",
        "vendor": "Intel Corporation",
        "vendor_id": "8086"
      },
      "subsystem_pci_info": {
        "model": "ASRock Challenger ITX Arc A380",
        "model_id": "6004",
        "vendor": "ASRock Incorporation",
        "vendor_id": "1849"
      }
    },
    "vulkan_instances": []
  },
  "pci_info": {
    "device_pci_info": {
      "model": "DG2 [Arc A380]",
      "model_id": "56A5",
      "vendor": "Intel Corporation",
      "vendor_id": "8086"
    },
    "subsystem_pci_info": {
      "model": "ASRock Challenger ITX Arc A380",
      "model_id": "6004",
      "vendor": "ASRock Incorporation",
      "vendor_id": "1849"
    }
  },
  "power_profile_modes": null,
  "power_states": {
    "core": [
      {
        "enabled": true,
        "value": 300
      },
      {
        "enabled": true,
        "value": 600
      },
      {
        "enabled": true,
        "value": 2450
      }
    ],
    "vram": []
  },
  "stats": {
    "clockspeed": {
      "gpu_clockspeed": 300,
      "sensors": {},
      "target_gpu_clockspeed": 300
    },
    "fan": {
      "control_enabled": false,
      "pmfw_info": {},
      "speed_current": 945
    },
    "power": {
      "cap_current": 55.0,
      "cap_default": 55.0,
      "cap_max": 400.0,
      "cap_min": 0.0
    },
    "temps": {
      "pkg": {
        "crit": null,
        "crit_hyst": null,
        "current": 56.0,
        "display_only": true,
        "primary": true
      },
      "vram": {
        "crit": null,
        "crit_hyst": null,
        "current": 54.0,
        "display_only": true,
        "primary": true
      }
    },
    "throttle_info": {},
    "voltage": {
      "gpu": 605,
      "sensors": {}
    },
    "vram": {}
  }
}
