lact-daemon/src/tests/snapshots/lact_daemon__tests__intel__cometlake.snap
---
source: lact-daemon/src/tests/mod.rs
expression: device_info
---
{
  "clocks_info": {
    "table": {
      "type": "intel",
      "value": {
        "gt_freq": [
          300,
          1150
        ],
        "rp0_freq": 1150,
        "rpe_freq": 300,
        "rpn_freq": 300
      }
    }
  },
  "info": {
    "driver": "i915",
    "drm_info": {
      "execution_units": 24,
      "memory_info": {
        "cpu_accessible_total": 0,
        "cpu_accessible_used": 0,
        "resizeable_bar": true
      },
      "subslices": 3,
      "vram_clock_ratio": 1.0
    },
    "flags": [],
    "link_info": {},
    "pci_info": {
      "device_pci_info": {
        "model": "CometLake-U GT2 [UHD Graphics]",
        "model_id": "9B41",
        "vendor": "Intel Corporation",
        "vendor_id": "8086"
      },
      "subsystem_pci_info": {
        "model_id": "22B1",
        "vendor": "Lenovo",
        "vendor_id": "17AA"
      }
    },
    "vulkan_instances": []
  },
  "pci_info": {
    "device_pci_info": {
      "model": "CometLake-U GT2 [UHD Graphics]",
      "model_id": "9B41",
      "vendor": "Intel Corporation",
      "vendor_id": "8086"
    },
    "subsystem_pci_info": {
      "model_id": "22B1",
      "vendor": "Lenovo",
      "vendor_id": "17AA"
    }
  },
  "power_profile_modes": null,
  "power_states": {
    "core": [
      {
        "enabled": true,
        "value": 300
      },
      {
        "enabled": true,
        "value": 300
      },
      {
        "enabled": true,
        "value": 1150
      },
      {
        "enabled": true,
        "value": 1150
      }
    ],
    "vram": []
  },
  "stats": {
    "clockspeed": {
      "gpu_clockspeed": 300,
      "sensors": {},
      "target_gpu_clockspeed": 300
    },
    "fan": {
      "control_enabled": false,
      "pmfw_info": {}
    },
    "power": {
      "cap_min": 0.0
    },
    "temps": {},
    "voltage": {
      "sensors": {}
    },
    "vram": {}
  }
}
