lact-daemon/src/tests/snapshots/lact_daemon__tests__intel__tigerlake.snap
---
source: lact-daemon/src/tests/mod.rs
expression: device_info
---
{
  "clocks_info": {
    "table": {
      "type": "intel",
      "value": {
        "gt_freq": [
          1100,
          1300
        ],
        "rp0_freq": 1300,
        "rpe_freq": 600,
        "rpn_freq": 100
      }
    }
  },
  "info": {
    "driver": "xe",
    "drm_info": {
      "execution_units": 24,
      "memory_info": {
        "cpu_accessible_total": 0,
        "cpu_accessible_used": 0,
        "resizeable_bar": true
      },
      "subslices": 3,
      "vram_clock_ratio": 1.0
    },
    "flags": [],
    "link_info": {},
    "pci_info": {
      "device_pci_info": {
        "model": "TigerLake-LP GT2 [Iris Xe Graphics]",
        "model_id": "9A49",
        "vendor": "Intel Corporation",
        "vendor_id": "8086"
      },
      "subsystem_pci_info": {
        "model_id": "3F19",
        "vendor": "Lenovo",
        "vendor_id": "17AA"
      }
    },
    "vulkan_instances": []
  },
  "pci_info": {
    "device_pci_info": {
      "model": "TigerLake-LP GT2 [Iris Xe Graphics]",
      "model_id": "9A49",
      "vendor": "Intel Corporation",
      "vendor_id": "8086"
    },
    "subsystem_pci_info": {
      "model_id": "3F19",
      "vendor": "Lenovo",
      "vendor_id": "17AA"
    }
  },
  "power_profile_modes": null,
  "power_states": {
    "core": [
      {
        "enabled": true,
        "value": 100
      },
      {
        "enabled": true,
        "value": 600
      },
      {
        "enabled": true,
        "value": 1300
      }
    ],
    "vram": []
  },
  "stats": {
    "clockspeed": {
      "gpu_clockspeed": 1100,
      "sensors": {},
      "target_gpu_clockspeed": 1100
    },
    "fan": {
      "control_enabled": false,
      "pmfw_info": {}
    },
    "power": {
      "cap_min": 0.0
    },
    "temps": {},
    "throttle_info": {},
    "voltage": {
      "sensors": {}
    },
    "vram": {}
  }
}
